[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.4.1-rc.1"
hdk = "=0.3.1-rc.1"
serde = "1.0"

[workspace.dependencies.chatroom]
path = "dnas/chatroom/zomes/coordinator/chatroom"

[workspace.dependencies.chatroom_integrity]
path = "dnas/chatroom/zomes/integrity/chatroom"
